Move to final package name, addClass method.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
   <servlet>
     <servlet-name>MusicPath</servlet-name>
-    <servlet-class>org.musicpath.MusicPath</servlet-class>
+    <servlet-class>info.funesrdf.MusicPath</servlet-class>
   </servlet>
 
   <servlet-mapping>
