--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
 #Fri Mar 05 20:44:02 PST 2010
-project.name=musicpath
-project.organization=org.musicpath
-sbt.version=0.7.5.RC0
-project.version=0.2
+project.name=funes
+project.organization=info.funesrdf
+sbt.version=0.7.5
+project.version=0.1
 build.scala.versions=2.8.1
 project.initialize=false
